@@ -119,6 +119,7 @@ Version 1.3
  - Pull Request #508 - Update Fibaro FGFS101 Association Groups thanks to Nechry (Justin)
  - Pull Request #504 - CRC16Encap CC Support from xs4 (Justin)
  - Pull Request #522 - Dragon Tech In wall dimmer from Stevejbauer (Justin)
+ - Fix Issue #523 - Add Wenzhou Door/Window Sensor from whiteduck22 (Justin)
 
 Version 1.2 
  - Released on 15/10/14
